--- a/feature/applist/src/main/res/values-ru/strings.xml
+++ b/feature/applist/src/main/res/values-ru/strings.xml
@@ -33,4 +33,35 @@
     <string name="settings">Настройки</string>
     <string name="support_and_feedback">поддержка и обратная связь</string>
     <string name="app_name">Blocker</string>
+    <string name="app_info">Информация о приложении</string>
+    <string name="service">Службы</string>
+    <string name="receiver">Приемники</string>
+    <string name="activity">Активити</string>
+    <string name="content_provider">Поставщики</string>
+    <string name="launch_app">запустить приложение</string>
+    <string name="cannot_launch_this_app">Не удалось запустить это приложение</string>
+    <string name="blocker_rules">правилBlocker</string>
+    <string name="export_rules">Экспорт правил</string>
+    <string name="import_rules">Импорт правил</string>
+    <string name="ifw_rules">правилIFW</string>
+    <string name="export_ifw_rules">Экспорт правил IFW</string>
+    <string name="import_ifw_rules">Импорт правил IFW</string>
+    <string name="reset_ifw">Сбросить IFW</string>
+    <string name="more_info">Больше информации</string>
+    <string name="target_sdk_version">Целевая версия SDK</string>
+    <string name="minimum_sdk_version">Минимальная версия SDK</string>
+    <string name="data_dir">каталог данных</string>
+    <string name="enable_application">Включить приложение</string>
+    <string name="refresh">Обновить</string>
+    <string name="block_all_of_this_page">Заблокировать всю эту страницу</string>
+    <string name="enable_all_of_this_page">Включить всю эту страницу</string>
+    <string name="disabling_hint">Отключение подсказки…</string>
+    <string name="enabling_hint">Включение подсказки…</string>
+    <string name="analyze_service">Анализ сервиса</string>
+    <string name="description">Описание</string>
+    <string name="blocking_effect">Эффект блокировки</string>
+    <string name="recommended_blocking">Рекомендуемая блокировка</string>
+    <string name="belonging_sdk">Принадлежащий SDK</string>
+    <string name="save">Сохранить</string>
+    <string name="cancel">Отмена</string>
 </resources>
