--- a/feature/applist/src/main/res/values-zh-rCN/strings.xml
+++ b/feature/applist/src/main/res/values-zh-rCN/strings.xml
@@ -33,4 +33,35 @@
     <string name="settings">设置</string>
     <string name="support_and_feedback">帮助与反馈</string>
     <string name="app_name">Blocker</string>
+    <string name="app_info">应用信息</string>
+    <string name="receiver">广播接收器</string>
+    <string name="content_provider">内容提供者</string>
+    <string name="activity">活动</string>
+    <string name="service">服务</string>
+    <string name="launch_app">启动应用</string>
+    <string name="cannot_launch_this_app">无法启动这个应用</string>
+    <string name="blocker_rules">Blocker规则</string>
+    <string name="export_rules">导出规则</string>
+    <string name="import_rules">导入规则</string>
+    <string name="ifw_rules">IFW规则</string>
+    <string name="export_ifw_rules">导出IFW规则</string>
+    <string name="import_ifw_rules">导入IFW规则</string>
+    <string name="reset_ifw">重置IFW</string>
+    <string name="more_info">更多信息</string>
+    <string name="target_sdk_version">目标SDK版本</string>
+    <string name="minimum_sdk_version">最低SDK版本</string>
+    <string name="data_dir">数据目录</string>
+    <string name="enable_application">启用应用</string>
+    <string name="refresh">刷新</string>
+    <string name="block_all_of_this_page">禁用该页全部</string>
+    <string name="enable_all_of_this_page">启用该页全部</string>
+    <string name="disabling_hint">禁用组件中…</string>
+    <string name="enabling_hint">启用组件中…</string>
+    <string name="analyze_service">分析服务</string>
+    <string name="description">描述</string>
+    <string name="blocking_effect">阻止效果</string>
+    <string name="recommended_blocking">推荐阻止</string>
+    <string name="belonging_sdk">归属SDK</string>
+    <string name="save">保存</string>
+    <string name="cancel">取消</string>
 </resources>
