--- a/feature/applist/src/main/res/values/strings.xml
+++ b/feature/applist/src/main/res/values/strings.xml
@@ -34,4 +34,36 @@
     <string name="support_and_feedback">Support and feedback</string>
     <string name="app_name">Blocker</string>
     <string name="version_code_template" translatable="false">%1$s (%2$s)</string>
+    <string name="app_info">App info</string>
+    <string name="service">Service</string>
+    <string name="receiver">Receiver</string>
+    <string name="activity">Activity</string>
+    <string name="content_provider">Content Provider</string>
+    <string name="launch_app">Launch app</string>
+    <string name="cannot_launch_this_app">Cannot launch this app</string>
+    <string name="blocker_rules">Blocker rules</string>
+    <string name="export_rules">Export Rules</string>
+    <string name="import_rules">Import Rules</string>
+    <string name="ifw_rules">IFW rules</string>
+    <string name="export_ifw_rules">Export IFW Rules</string>
+    <string name="import_ifw_rules">Import IFW Rules</string>
+    <string name="reset_ifw">Reset IFW</string>
+    <string name="more_info">More info</string>
+    <string name="target_sdk_version">Target SDK version</string>
+    <string name="minimum_sdk_version">Minimum SDK version</string>
+    <string name="data_dir">Data dir</string>
+    <string name="enable_application">Enable application</string>
+    <string name="refresh">Refresh</string>
+    <string name="block_all_of_this_page">Block all of this page</string>
+    <string name="enable_all_of_this_page">Enable all of this page</string>
+    <string name="disabling_hint">Disabling hint…</string>
+    <string name="enabling_hint">Enabling hint…</string>
+    <string name="analyze_service">Analyze service</string>
+    <string name="description">Description</string>
+    <string name="blocking_effect">Blocking effect</string>
+    <string name="recommended_blocking">Recommended blocking</string>
+    <string name="belonging_sdk">Belonging SDK</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="data_with_explanation" translatable="false">%1$s (%2$s)</string>
 </resources>
